# reforis-netboot

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  babel.cfg  pyproject.toml  setup.py
js/: .eslintrc.js  .prettierrc  package-lock.json  package.json  webpack.config.js
js/src/: API.js  app.js
js/src/netboot/: Devices.js  DevicesTable.css  DevicesTable.js  DevicesTableRow.js  Netboot.js  deviceStates.js  hooks.js
js/src/netboot/__tests__/: Devices.test.js  Netboot.test.js
reforis_netboot/: __init__.py
reforis_netboot/translations/: messages.pot
reforis_netboot/translations/cs/LC_MESSAGES/: messages.po
reforis_netboot/translations/da/LC_MESSAGES/: messages.po
reforis_netboot/translations/de/LC_MESSAGES/: messages.po
reforis_netboot/translations/el/LC_MESSAGES/: messages.po
reforis_netboot/translations/en/LC_MESSAGES/: messages.po
reforis_netboot/translations/es/LC_MESSAGES/: messages.po
reforis_netboot/translations/fi/LC_MESSAGES/: messages.po
reforis_netboot/translations/fo/LC_MESSAGES/: messages.po
reforis_netboot/translations/fr/LC_MESSAGES/: messages.po
reforis_netboot/translations/hr/LC_MESSAGES/: messages.po
reforis_netboot/translations/hu/LC_MESSAGES/: messages.po
reforis_netboot/translations/it/LC_MESSAGES/: messages.po
reforis_netboot/translations/ja/LC_MESSAGES/: messages.po
reforis_netboot/translations/ko/LC_MESSAGES/: messages.po
reforis_netboot/translations/lt/LC_MESSAGES/: messages.po
reforis_netboot/translations/nb/LC_MESSAGES/: messages.po
tests/: test_api.py
(+11 files in other folders)
