[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reforis-netboot"
version = "1.3.0"
description = "reForis Netboot plugin allows you to set up your Turris MOX as an AP attached to another Turris router."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "CZ.NIC, z.s.p.o. (https://www.nic.cz/)", email = "software@turris.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = ["Babel", "flask", "Flask-Babel", "reforis"]

[project.optional-dependencies]
devel = ["pytest", "ruff", "werkzeug"]

[project.entry-points."foris.plugins"]
reforis_netboot = "reforis_netboot:netboot"

[tool.hatch.build.targets.sdist]
include = ["/js", "/reforis_netboot", "/reforis_static"]

[tool.hatch.build.targets.wheel.hooks.reforis]
dependencies = ["hatch-reforis"]
reforis_module = "reforis_netboot"

[tool.hatch.build.targets.wheel]
include = ["/reforis_netboot", "/reforis_static"]
exclude = ["**/*.po", "**/*.pot"]

[tool.ruff]
line-length = 120
